Fix h-scrollbar not showing up (Ace)
Kudos to Alex Badescu for finding the fix (github.com/badescuga)

--- a/Kudu.Services.Web/Content/Styles/FileBrowser.css
+++ b/Kudu.Services.Web/Content/Styles/FileBrowser.css
@@ -173,6 +173,11 @@ textarea {
     float: right;
 }
 
+div.editor {
+    position: relative;
+    width: inherit;
+}
+
 .statusbar {
     padding: 6px 18px;
     margin-left: 35px;
